--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "react-test-renderer": "^17.0.2",
     "redux-immutable-state-invariant": "^2.1.0"
   }
 }
